# tinytalk

./: .gitignore  AGENTS.md  GLOSSARY.md  ISSUES.md  PRD.md  README.ko.md  README.md  VISION.md  config.toml.example  go.mod  install.sh  pyproject.toml
.agentic/: plan.md
.github/workflows/: agentic.yml  claude-code-review.yml  claude.yml  install.yml  release.yml
clite/: __init__.py  auth.py  cache.py  cli.py  config.py  contract.py  engine.py  grounding.py  parsing.py  redact.py  tiers.py  validate.py
clite/eval/: __init__.py  runner.py  suite.py
clite/provider/: __init__.py  anthropic_compat.py  azure_openai.py  base.py  bedrock.py  claude_agent.py  codex_agent.py  factory.py  openai_compat.py
clite/shell/: clite.zsh
docs/agents/: ISSUES.md  PRD-provider-setup.md  PRD.md
docs/bench/: AUTOMATION.md  RUNBOOK.md  SUITE-V4-HANDOFF.md  SUITE-V4.md  bench.toml
docs/specs/: bench-01-suite.md  bench-02-metrics.md  bench-03-report.md  bench-04-run.md  claude-code-bedrock-auth.md
internal/config/: config.go  config_test.go
internal/contract/: contract.go
internal/provider/: provider.go
internal/tier/: tier.go  tier_test.go
packaging/: tt_entry.py
scripts/: build-binary.sh  gen_banner.py  install.sh  uninstall.sh  verify-linux-binary.sh
tests/: stubs.py  test_addons.py  test_analyze.py  test_anthropic_compat.py  test_atuin_compare.py  test_auth.py  test_azure_openai.py  test_bedrock.py  test_branding.py  test_cache.py  test_claude_agent.py  test_cli.py  test_cli_history.py  test_codex_agent.py  test_config.py  test_contract.py  test_dashboard.py  test_engine.py  test_eval.py  test_groundcache.py  test_grounding.py  test_history.py  test_history_retention.py  test_i18n.py  test_install.py  test_local_llm.py  test_localsetup.py  test_openai_compat.py  test_oracle.py  test_parsing.py  test_preview.py  test_prompts.py  test_publish.py  test_rcfile.py  test_report.py  test_setup_wizard.py  test_shell.py  test_suite_assertions.py  test_tiers.py  test_uninstall.py  (+2 more)
tinytalk/: __init__.py  addons.py  auth.py  branding.py  cache.py  cli.py  config.py  contract.py  cost.py  engine.py  groundcache.py  grounding.py  history.py  i18n.py  local_llm.py  localsetup.py  parsing.py  prompts.py  rcfile.py  setup_wizard.py  tiers.py  validate.py
tinytalk/eval/: __init__.py  analyze.py  atuin.py  dashboard.py  oracle.py  preview.py  publish.py  report.py  runner.py  suite.py
tinytalk/locales/: __init__.py  ko.py
tinytalk/provider/: __init__.py  anthropic_compat.py  azure_openai.py  (+6 more)
(+114 files in other folders)
