# TinyTalk — Python project (managed with uv).
# Build: `uv build`   Run: `uv run tt ...`   Install: `uv tool install .`
[project]
name = "tinytalk"
version = "0.2.0rc7"
description = "Turn plain English at the shell into a real, validated command."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Paul B. Kim" }]
# Runtime deps are added per provider/feature issue. The pivot makes the two
# agent SDKs first-class backends (Claude Agent SDK, OpenAI Codex SDK), with a
# lightweight OpenAI-compatible path for local models — added when those land.
dependencies = [
    "claude-agent-sdk>=0.2.110",
    "httpx>=0.27",
    "keyring>=25",
    "questionary>=2.0",
    "tomlkit>=0.13",
]

# Heavier per-provider SDKs are opt-in — `uv tool install 'tinytalk[bedrock]'` etc. — so the
# base install stays light for users who only need one or two backends (PRD-provider-setup.md §2).
[project.optional-dependencies]
bedrock = ["boto3>=1.34"]
codex = ["openai-codex>=0.1.0b3"]

[project.scripts]
tt = "tinytalk.cli:main"

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tinytalk"]

[tool.ruff]
line-length = 100

# TinyTalk integrates with zsh and reads OS/coreutils facts — macOS/Linux only.
[tool.uv]
environments = ["sys_platform == 'darwin'", "sys_platform == 'linux'"]
# `openai-codex` (tinytalk[codex]) is pre-1.0 and pins its bundled CLI binary to a prerelease too.
prerelease = "allow"
